--- a/c/blake3_c_rust_bindings/Cargo.toml
+++ b/c/blake3_c_rust_bindings/Cargo.toml
@@ -18,6 +18,8 @@ prefer_intrinsics = []
 neon = []
 # Enable TBB-based multithreading.
 tbb = []
+# Enable OpenMP-based multithreading.
+openmp = ["dep:openmp-sys"]
 
 [dev-dependencies]
 arrayref = "0.3.5"
@@ -30,3 +32,6 @@ reference_impl = { path = "../../reference_impl" }
 [build-dependencies]
 cc = "1.0.48"
 ignore = "0.4.23"
+
+[dependencies]
+openmp-sys = { version = "1.2.3", optional = true }
